# CV-Vision-2016

./: CMakeLists.txt  README.md  calculations.cc  calculations.hh  clamp.hh  line_info.hh  main.cc  mutexed.hh  netcode_thread.cc  netcode_thread.hh  parse_settings.cc  parse_settings.hh  socket.cc  socket.hh  to_string.hh  trackbar.cc  trackbar.hh  variables.cc  variables.hh  vision.hh
